# mapstitch

./: CMakeLists.txt  Makefile  README  mainpage.dox  manifest.xml  package.xml
include/hector_mapstitch/: mapstitch.h  utils.h
include/mapstitch/: mapstitch.h
include/robust_matcher/: robust_matcher.h
src/: CMakeLists.txt  main.cpp  mapstitch.cpp  robust_matcher.cpp  rosmain.cpp  utils.cpp
